turtleart.lessons.turtleart.Main.DiskFour.scala.code
override def run() {
	for (i<-1 to 90) {
	avance(100);
	recule(100);
	droite(1);
	}
	setCouleur(Couleur: Red)
	for (i<-1 to 90) {
	avance(100);
	recule(100);
	droite(1);
	}
	setCouleur(Couleur: Yellow)
	for (i<-1 to 90) {
	avance(100);
	recule(100);
	droite(1);
	}
	setCouleur(Couleur: Pink)
	for (i<-1 to 90) {
	avance(100);
	recule(100);
	droite(1);
	}
}
